--- a/src/index.css
+++ b/src/index.css
@@ -163,3 +163,9 @@ label {
 .moz:hover i::before {
     transform: translate(-50%, -50%) rotate(315deg);
 }
+
+.menu {
+    & :where(li){
+        position: unset !important;
+    }
+}
